# libcorrect

./: .appveyor-install-tools.cmd  .gitignore  .gitingore  CMakeLists.txt  Package.swift  README.md  appveyor.yml  libcorrect.sln  libcorrect.vcxproj  libcorrect.vcxproj.filters  main.c  resolve.json  waf  wscript
convolutional/: bit.c
debian/: changelog  control  files  rules
examples/basic_example/: basic_example.cpp  wscript
include/: correct-sse.h  correct.h  fec_shim.h
include/correct/: convolutional.h  portable.h  reed-solomon.h
include/correct/convolutional/: bit.h  convolutional.h  error_buffer.h  history_buffer.h  lookup.h  metric.h
include/correct/convolutional/sse/: convolutional.h  lookup.h
include/correct/reed-solomon/: field.h  polynomial.h
include/correct/util/: error-sim-fec.h  error-sim-shim.h  error-sim-sse.h  error-sim.h
include/libcorrect/correct/reed-solomon/: field.h
rs/: main.c
src/: fec_shim.c
src/convolutional/: bit.c  convolutional.c  decode.c  encode.c  history_buffer.c  lookup.c  metric.c
src/convolutional/sse/: CMakeLists.txt  decode.c  lookup.c
src/correct/: fec_shim.c
src/reed-solomon/: CMakeLists.txt  decode.c  encode.c  polynomial.c  reed-solomon.c  rsdecode.c  rsencode.c
tests/: CMakeLists.txt  convolutional-shim.c  convolutional-sse.c  convolutional.c  reed-solomon-fec-interop.c  reed-solomon-shim-interop.c  reed-solomon.c  rs_tester.c  rs_tester_fec.c  rs_tester_fec_shim.c
tests/include/: rs_tester.h  rs_tester_fec.h  rs_tester_fec_shim.h
tools/: CMakeLists.txt  find_conv_libfec_poly.c  find_conv_optim_poly.c  find_conv_optim_poly_annealing.c  find_rs_primitive_poly.c
util/: CMakeLists.txt  error-sim-fec.c  error-sim-shim.c  error-sim-sse.c  error-sim.c
